syntax="proto3";

option go_package = "github.com/codeandlearn1991/news-grpc/api/news/v1;newsv1";

package news.v1;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

message CreateRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string author = 2 [(buf.validate.field).string.min_len = 2];
  string title = 3 [
    (buf.validate.field).string.min_len = 10,
    (buf.validate.field).string.max_len = 100
  ];
  string summary = 4 [(buf.validate.field).string.min_len = 20];
  string content = 5 [(buf.validate.field).string.min_len = 100];
  string source = 6 [(buf.validate.field).string.uri = true];
  repeated string tags = 7 [
    (buf.validate.field).repeated.min_items = 1
  ];
}

message CreateResponse {
  string id = 1;
  string author = 2;
  string title = 3;
  string summary = 4;
  string content = 5;
  string source = 6;
  repeated string tags = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message GetResponse {
  string id = 1;
  string author = 2;
  string title = 3;
  string summary = 4;
  string content = 5;
  string source = 6;
  repeated string tags = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message GetRequest {
  string id = 1;
}

message GetAllResponse {
  string id = 1;
  string author = 2;
  string title = 3;
  string summary = 4;
  string content = 5;
  string source = 6;
  repeated string tags = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message NewsID {
  // Id of the news.
  string id = 1;
}